# balldontlieAPI

./: Makefile  README.md  pyproject.toml
src/balldontlie/: __init__.py  balldontlie.py  models.py
tests/: test_balldontlie.py
